# first-interpreter-in-cpp

./: .gitignore  README.md  config.kdl  foo.cpp  to_do.txt
.archive/: lexer.py
01/src/monkey/lexer/: CMakeLists.txt  lexer.cpp  lexer_test.cpp  test_lexer.fish
01/src/monkey/lexer/include/: lexer.h
01/src/monkey/token/: CMakeLists.txt  constants.h  token.cpp  token.h  token.py  tokenfoo  tokenfoo.cpp
01/src/monkey/token/include/: types.h
03/src/monkey/token/: token.py
monkey01/: CMakeLists.txt  build.fish
monkey01/include/lexer/: lexer.h
monkey01/include/token/: constants.h  token.h
monkey01/src/: CMakeLists.txt  lexer.cpp  token.cpp
monkey01/src/repl/: CMakeLists.txt  build_repl.fish  lexer_repl.cpp
monkey01/test/: lexer_test.cpp
monkey02/: .clangd  CMakeLists.txt  build.fish  cml_plan.md
monkey02/include/: ast.h  lexer.h
monkey02/include/lexer/: lexer.h
monkey02/include/parser/: parse_exception.h  parser.h
monkey02/include/token/: constants.h  token.h  types.h
monkey02/src/: lexer.cpp  parser.cpp  token.cpp
monkey02/test/: lexer.cpp  parser_test.cpp  token.cpp
